# Nexus

./: .env.example  .gitignore  capacitor.config.ts  drizzle.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
drizzle/: 0000_initial.sql
scripts/: supabase-env.example.ps1
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  CommandPalette.tsx  Layout.tsx
src/components/: EmptyState.tsx  ModuleHeader.tsx  Tag.tsx
src/components/ui/: Button.tsx  Input.tsx  Skeleton.tsx
src/data/: commands.ts  seed.ts
src/db/: indexedDb.ts  schema.ts
src/features/: SettingsPage.tsx
src/features/armin/: ArminPage.tsx
src/features/auth/: AuthGate.tsx
src/features/commands/: CommandCenterPage.tsx
src/features/connect/: ConnectPage.tsx
src/features/future/: FuturePage.tsx
src/features/progress/: ProgressPage.tsx
src/features/prompts/: PromptPage.tsx
src/features/stash/: StashPage.tsx
src/features/workspaces/: WorkspacePage.tsx
src/hooks/: useRealtimeTable.ts
src/lib/: sync.ts  utils.ts
src/stores/: useNexusStore.ts
supabase/: config.toml
supabase/migrations/: 202606030001_nexus_schema.sql  202606030002_realtime_rls_storage.sql
